--- a/package.json
+++ b/package.json
@@ -9,7 +9,13 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@ant-design/icons": "^4.7.0",
+    "antd": "^4.16.13",
+    "babel-plugin-import": "^1.13.3",
+    "less": "^4.1.2",
+    "less-loader": "^10.0.1",
     "next": "11.1.2",
+    "next-plugin-antd-less": "^1.4.3",
     "react": "17.0.2",
     "react-dom": "17.0.2"
   },
