--- a/package.json
+++ b/package.json
@@ -20,7 +20,9 @@
     "react-dom": "17.0.2"
   },
   "devDependencies": {
+    "cypress": "^8.5.0",
     "eslint": "7.32.0",
-    "eslint-config-next": "11.1.2"
+    "eslint-config-next": "11.1.2",
+    "prettier": "^2.4.1"
   }
 }
